Add reusing checkpoints into `annotate_sex` (#1)
* Add reusing checkpoints into annotate_sex

* Fix

* Fix

* Use file_exists

* Fix

* Fix

Various linting updates:

Drop the TypeVar, which doesn't work anyway as the parameter is always
just annotate_sex()'s argument, which is Optional[str]:

pipeline.py:500: error: Value of type variable "T" of "checkpoint_path" cannot be "str | None"

Reorder import. Expand docstrings with parameter placeholders.
Use %s in logger. Suppress black and autopep8 in pipeline.py so we don't
have to reformat re-indented patched code. Unreformat concatenated strings,
so `git diff -w origin/main..` is cleaner.

BEHAVIOUR CHANGE: checkpoint_path()'s name argument already ends in ".ht".

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,15 @@
 [tool.black]
 target-version = ['py39', 'py310', 'py311']
 preview = true
+# [CPG-LOCAL] Avoid spurious reformatting in local patches
+exclude = 'gnomad/sample_qc/pipeline.py'
 [tool.isort]
 profile = "black"
 [tool.autopep8]
 # Use same max line length as the default in Black - 88
 max_line_length = 88
+# [CPG-LOCAL] Avoid spurious reformatting in local patches
+exclude = 'gnomad/sample_qc/pipeline.py'
 # Ignore errors that conflict with Black
 # E201 - whitespace after ‘(‘
 # E202 - whitespace before ‘)’
